welcome.lessons.welcome.conditions.Conditions.scala.error
Program:2: error: ')' expected but integer literal found.
if (buggle 1 = estFaceMur())
           ^Program:2: error: illegal start of simple expression
if (buggle 1 = estFaceMur())
                           ^