welcome.lessons.welcome.conditions.Conditions.scala.code
if (buggle 1 = estFaceMur())
{ 
	else
	{
		avance();
	}
}
